minor changes for the header; fix on mobile

--- a/src/client/components/header/style.sass
+++ b/src/client/components/header/style.sass
@@ -100,7 +100,7 @@ header
       color: #FFF
       font-size: 12px
     ul.main-sublinks
-      padding: 10px 0
+      // padding: 10px 0
       margin: 0
       background: #FFF
       li
@@ -110,13 +110,15 @@ header
           display: inline-block
           color: inherit
           padding: 9px 7px
-          border-bottom: 2px solid #333
+          // border-bottom: 2px solid #333
           text-transform: uppercase
           font-size: 12px
 
         .sub
           display: none !important
-          padding-left: 30px
+          margin-left: 30px
+          &:hover, &.active
+            background: rgba(0,0,0,0.3)
 
         &.active, &:hover
           a
@@ -167,7 +169,7 @@ header
       z-index: 200
 
   main
-    opacity: 0.1
+    opacity: 0.2
 
     -webkit-transform: translate3D(50px, 0, 0)
     -ms-transform: translate3D(50px, 0, 0)
